# pyFlowLauncher

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.py  sitemap.xml  tox.ini
.github/: dependabot.yml  release-please-config.json
.github/workflows/: create_release.yaml  docs.yaml  on_release.yaml  prerelease.yaml  publish.yaml  pypi.yaml  release-please.yaml  release.yaml  tests.yaml
docs/: index.md
docs/examples/guide/api_requests/: example1.py  example2.py
docs/examples/guide/launcher_icons/: example1.py
docs/examples/guide/plugin_methods/: example1.py  example2.py
docs/examples/guide/scoring_results/: example1.py
docs/guide/: API Requests.md  Launcher_Icons.md  Plugin methods.md  scoring_results.md
docs/reference/: api.md  event.md  plugin.md  result.md
examples/guide/launcher_icons/: example1.py
examples/guide/plugin_methods/: example1.py  example2.py
guide/API Requests/: index.html
guide/Launcher_Icons/: index.html
guide/Plugin methods/: index.html
guide/scoring_results/: index.html
pyflowlauncher/: __init__.py  api.py  base.py  event.py  icons.py  jsonrpc.py  launcher.py  manifest.py  method.py  plugin.py  response.py  result.py  settings.py  shared.py  string_matcher.py  types.py  utils.py
pyflowlauncher/jsonrpc/: __init__.py  client.py  handler.py  id_generation.py  ids.py  models.py  server.py
pyflowlauncher/models/: json_rpc.py  plugin_manifest.py  result.py
reference/api/: index.html
reference/event/: index.html
reference/plugin/: index.html
reference/result/: index.html
tests/: test_api.py  test_events.py  test_id_generation.py  test_jsonrpc.py  test_jsonrpc_client.py  test_jsonrpc_server.py  test_launcher.py  test_method.py  test_plugin.py  test_response.py  test_result.py  test_string_matcher.py
tests/e2e/: conftest.py  test_v1_subprocess.py  test_v2_subprocess.py
tests/e2e/fixtures/v1_plugin/: main.py  plugin.json
tests/e2e/fixtures/v2_plugin/: main.py  plugin.json
tests/integration/: test_plugin_methods.py  test_v1_protocol.py  test_v2_protocol.py
tests/unit/: test_api.py  test_events.py  test_jsonrpc.py  test_launcher.py  test_plugin.py  test_response.py  test_result.py  test_string_matcher.py
