[build-system]
requires = ["setuptools"]

[project]
name = "pyflowlauncher"
authors = [
    {name = "William McAllister", email = "dev.garulf@gmail.com"}
]
version = '0.5.1-dev.0'
description = "Python library to help build Flow Launcher plugins."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    'typing_extensions>=4.8.0; python_version < "3.11"'
]

[tool.setuptools]
packages = ["pyflowlauncher"]

[tool.setuptools.package-data]
"pyflowlauncher" = ["py.typed"]

[tool.bumpversion]
current_version = "0.5.1-dev.0"
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:
        -(?P<label>dev|rc|release)
        (?:.(?P<label_n>[0-9]+))?
    )?
"""
serialize = [
    "{major}.{minor}.{patch}-{label}.{label_n}",
    "{major}.{minor}.{patch}",
]
search = "version = '{current_version}'"
replace = "version = '{new_version}'"
tag = true
allow_dirty = false
commit = true

[tool.bumpversion.parts.label]
optional_value = "release"
values =[
	"dev",
	"rc",
	"release",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
