[build-system]
requires = ["setuptools"]

[project]
name = "pyflowlauncher"
authors = [
    {name = "William McAllister", email = "dev.garulf@gmail.com"}
]
version = "1.1.0"
description = "Python library to help build Flow Launcher plugins."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed"
]
dependencies = [
    'typing_extensions>=4.8.0; python_version < "3.11"'
]

[project.urls]
Repository = "https://github.com/Garulf/pyFlowLauncher"

[project.optional-dependencies]
all = ['typing_extensions>=4.8.0']

[tool.setuptools]
packages = ["pyflowlauncher", "pyflowlauncher.models"]

[tool.setuptools.package-data]
"pyflowlauncher" = ["py.typed"]

